// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShellTool > getDescription > should return the non-windows description when not on windows 1`] = `
"This tool executes a given shell command as \`bash -c <command>\`. Command can start background processes using \`&\`. Command is executed as a subprocess that leads its own process group. Command process group can be terminated as \`kill -- -PGID\` or signaled as \`kill -s SIGNAL -- -PGID\`.

      **Stderr Capture:** Always append \`2>&1\` to capture stderr alongside stdout, since errors and warnings are often emitted on stderr and would otherwise be lost.
      **Large Output:** When a command is likely to produce more than ~50 lines (e.g., builds, installs, large searches), redirect to a file first (e.g., \`command > /tmp/out.log 2>&1\`) and then inspect with \`tail\`, \`head\`, or \`grep\`.

      The following information is returned:

      Output: Combined stdout/stderr. Can be \`(empty)\` or partial on error and for any unwaited background processes.
      Exit Code: Only included if non-zero (command failed).
      Error: Only included if a process-level error occurred (e.g., spawn failure).
      Signal: Only included if process was terminated by a signal.
      Background PIDs: Only included if background processes were started.
      Process Group PGID: Only included if available."
`;

exports[`ShellTool > getDescription > should return the windows description when on windows 1`] = `
"This tool executes a given shell command as \`powershell.exe -NoProfile -Command <command>\`. Command can start background processes using PowerShell constructs such as \`Start-Process -NoNewWindow\` or \`Start-Job\`.

      **Stderr Capture:** Always append \`2>&1\` to capture stderr alongside stdout, since errors and warnings are often emitted on stderr and would otherwise be lost.
      **Large Output:** When a command is likely to produce more than ~50 lines (e.g., builds, installs, large searches), redirect to a file first (e.g., \`command > /tmp/out.log 2>&1\`) and then inspect with \`tail\`, \`head\`, or \`grep\`.

      The following information is returned:

      Output: Combined stdout/stderr. Can be \`(empty)\` or partial on error and for any unwaited background processes.
      Exit Code: Only included if non-zero (command failed).
      Error: Only included if a process-level error occurred (e.g., spawn failure).
      Signal: Only included if process was terminated by a signal.
      Background PIDs: Only included if background processes were started.
      Process Group PGID: Only included if available."
`;
